--- a/.github/workflows/Builder.yml
+++ b/.github/workflows/Builder.yml
@@ -6,13 +6,28 @@ on:
       - master
 
 env:
-  CMAKE_VERSION: 3.20.2
-  LLVM_VERSION: 14.0.0
+  CMAKE_VERSION: 3.25.2
+  LLVM_VERSION: 15.0.6
   NDK_VERSION: r25b
 
 jobs:
+  delete_latest_release:
+    runs-on: ubuntu-latest
+    steps:
+    - name: checkout master
+      uses: actions/checkout@master
+
+    - name: delete latest release
+      uses: dev-drprasad/delete-tag-and-release@v0.2.1
+      with:
+        delete_release: true
+        tag_name: latest
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
   linux_and_android:
     runs-on: ubuntu-latest
+    needs: delete_latest_release
     steps:
     - name: checkout master
       uses: actions/checkout@master
@@ -31,7 +46,7 @@ jobs:
         cp build/dobby-linux-all.tar.gz artifact/
         
       shell: bash
-    
+
     - name: compile android
       run: |
         python3 scripts/platform_builder.py --platform=android --arch=all --cmake_dir=$HOME/opt/cmake-$CMAKE_VERSION --llvm_dir=$HOME/opt/llvm-$LLVM_VERSION --android_ndk_dir=$HOME/opt/ndk-$NDK_VERSION
@@ -56,6 +71,7 @@ jobs:
 
   macos_and_iphoneos:
     runs-on: macos-latest
+    needs: delete_latest_release
     steps:
     - name: checkout dev
       uses: actions/checkout@master
@@ -74,7 +90,7 @@ jobs:
         cp build/dobby-macos-all.tar.gz artifact/
         
       shell: bash
-    
+
     - name: compile iphoneos
       run: |
         python3 scripts/platform_builder.py --platform=iphoneos --arch=all --cmake_dir=$HOME/opt/cmake-$CMAKE_VERSION/CMake.app/Contents
